--- a/boot-jpa/build.gradle
+++ b/boot-jpa/build.gradle
@@ -32,6 +32,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+
+    /*
+
+        Query DSL
+        - querydsl-jpa : QClass 생성
+        - querydsl-apt : Query DSL 관련 코드 생성
+
+    */
+
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 }
 
 tasks.named('test') {
